--- a/liriodosvales/templates/liriodosvales/detalhes_paciente.html
+++ b/liriodosvales/templates/liriodosvales/detalhes_paciente.html
@@ -1,47 +1,62 @@
 {% extends "layout.html" %}
 {% load static %}
-{% block extra_css %}
-<link rel="stylesheet" type="text/css" href="{% static 'liriodosvales/css/style.css' %}">
-{% endblock extra_css %}
+
 {% block title %}
     Lírio dos Vales - Detalhes do Paciente
 {% endblock title %}
+
 {% block content %}
-<main>
-    <section>
-        <h1>Detalhes do Paciente</h1>
-        <p><strong>Nome:</strong> {{ paciente.nome }}</p>
-        <p><strong>CPF:</strong> {{ paciente.cpf }}</p>
-        <p><strong>Data de Nascimento:</strong> {{ paciente.data_nascimento|date:"d/m/Y" }}</p>
-        <p><strong>Endereço:</strong> {{ paciente.endereco }}</p>
-        <p><strong>Telefone:</strong> {{ paciente.telefone }}</p>
-        <p><strong>Sexo:</strong> {{ paciente.sexo }}</p>
+<div class="container">
+    <h1 class="mb-4">Detalhes do Paciente</h1>
+    <div class="card mb-4">
+        <div class="card-body">
+            <h5 class="card-title">Informações Pessoais</h5>
+            <p><strong>Nome:</strong> {{ paciente.nome }}</p>
+            <p><strong>CPF:</strong> {{ paciente.cpf }}</p>
+            <p><strong>Data de Nascimento:</strong> {{ paciente.data_nascimento|date:"d/m/Y" }}</p>
+            <p><strong>Endereço:</strong> {{ paciente.endereco }}</p>
+            <p><strong>Telefone:</strong> {{ paciente.telefone }}</p>
+            <p><strong>Sexo:</strong> {{ paciente.sexo }}</p>
+        </div>
+    </div>
 
-        <h3>Medicações</h3>
-        <ul>
-            {% for medicacao in medicacoes %}
-            <li>{{ medicacao.nome }} - {{ medicacao.dosagem }} - {{ medicacao.posologia }}</li>
-            {% endfor %}
-        </ul>
+    <div class="card mb-4">
+        <div class="card-body">
+            <h5 class="card-title">Medicações</h5>
+            <ul class="list-group">
+                {% for medicacao in medicacoes %}
+                <li class="list-group-item">{{ medicacao.nome }} - {{ medicacao.dosagem }} - {{ medicacao.posologia }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
 
-        <h3>Alergias</h3>
-        <ul>
-            {% for alergia in alergias %}
-            <li>{{ alergia.nome }}</li>
-            {% endfor %}
-        </ul>
+    <div class="card mb-4">
+        <div class="card-body">
+            <h5 class="card-title">Alergias</h5>
+            <ul class="list-group">
+                {% for alergia in alergias %}
+                <li class="list-group-item">{{ alergia.nome }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
 
-        <h3>Diagnósticos</h3>
-        <ul>
-            {% for diagnostico in diagnosticos %}
-            <li>{{ diagnostico.nome }} - {{ diagnostico.codigo_cid }}</li>
-            {% endfor %}
-        </ul>
+    <div class="card mb-4">
+        <div class="card-body">
+            <h5 class="card-title">Diagnósticos</h5>
+            <ul class="list-group">
+                {% for diagnostico in diagnosticos %}
+                <li class="list-group-item">{{ diagnostico.nome }} - {{ diagnostico.codigo_cid }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
 
-        <a href="{% url 'liriodosvales:editar_paciente' paciente.id %}">Editar</a> |
-        <a href="{% url 'liriodosvales:remover_paciente' paciente.id %}" onclick="return confirm('Tem certeza que deseja remover este paciente?');">Remover</a>
-        <br><br>
-        <a href="{% url 'liriodosvales:listar_pacientes' %}">Voltar para lista de pacientes</a>
-    </section>
-</main>
+    <div class="d-flex justify-content-between">
+        <a href="{% url 'liriodosvales:editar_paciente' paciente.id %}" class="btn btn-warning">Editar</a>
+        <a href="{% url 'liriodosvales:remover_paciente' paciente.id %}" class="btn btn-danger" onclick="return confirm('Tem certeza que deseja remover este paciente?');">Remover</a>
+    </div>
+    <a href="{% url 'liriodosvales:listar_pacientes' %}" class="btn btn-secondary mt-3">Voltar para lista de pacientes</a>
+</div>
 {% endblock content %}
