--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,7 +6,7 @@
     <title>{% block title %}Supernova26 - Tecnologia Médica{% endblock %}</title>
     <!-- Link para o Bootstrap CSS (versão 5.3.0) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Link para o CSS personalizado -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"><!-- Link para o CSS personalizado -->
     {% block extra_css %}{% endblock %}
     {% block extra_head %}{% endblock %}
 </head>
